// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/molecules/NavMenuItem/Mobile Active 1`] = `
<span
  className="css-cygiex-Box eyzgrpe0"
>
  <div
    className="css-s865v2-MobileNavMenuItem"
  />
  <span
    className="css-sb6dso-Box eyzgrpe0"
  >
    Home
  </span>
</span>
`;

exports[`Storyshots Design Systems/molecules/NavMenuItem/Mobile Default 1`] = `
<span
  className="css-cygiex-Box eyzgrpe0"
>
  <div
    className="css-as14ju-MobileNavMenuItem"
  />
  <span
    className="css-37nree-Box eyzgrpe0"
  >
    Home
  </span>
</span>
`;
